Tables for documents api
